<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.meujogodavelhaapp.activity.MainActivity">
    <item
        android:id="@+id/menu_reseta"
        android:icon="@android:drawable/ic_menu_revert"
        android:title="@string/resetar"
        app:showAsAction="always" />
    <item

        android:id="@+id/menu_inicio"
        android:icon="@android:drawable/ic_media_previous"
        android:title="@string/inicio"
        app:showAsAction="always" />
    <!-- se deixar never, não aparece o icone -->
    <item
        android:id="@+id/menu_prefs"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/preferencias"
        app:showAsAction="never" />
</menu>