<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/purple_200"
    tools:context=".fragment.JogoFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:id="@+id/lay1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <TextView
            android:id="@+id/jogador1"
            style="@style/estilo_textview"
            android:layout_width="210dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:text="@string/jogad1" />


        <TextView
            android:id="@+id/placar1"
            style="@style/estilo_textview"
            android:layout_width="149dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/placa1"
            android:textSize="25sp"

            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lay2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/jogador2"
            style="@style/estilo_textview"
            android:layout_width="211dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:text="@string/jogad2" />

        <TextView
            android:id="@+id/placar2"
            style="@style/estilo_textview"
            android:layout_width="147dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/placa2"
            android:textSize="25sp"
            android:textStyle="bold" />

    </LinearLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/bt00"
                android:layout_width="0dp"
                android:layout_height="150dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:textSize="@android:dimen/app_icon_size"/>

            <Button
                android:id="@+id/bt01"
                android:layout_width="0dp"
                android:layout_height="150dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:textSize="@android:dimen/app_icon_size"/>

            <Button
                android:id="@+id/bt02"
                android:layout_width="0dp"
                android:layout_height="150dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:textSize="@android:dimen/app_icon_size"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/bt10"
                android:layout_width="0dp"
                android:layout_height="150dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:textSize="@android:dimen/app_icon_size"/>

            <Button
                android:id="@+id/bt11"
                android:layout_width="0dp"
                android:layout_height="150dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:textSize="@android:dimen/app_icon_size"/>

            <Button
                android:id="@+id/bt12"
                android:layout_width="0dp"
                android:layout_height="150dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:textSize="@android:dimen/app_icon_size"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/bt20"
                android:layout_width="0dp"
                android:layout_height="150dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:textSize="@android:dimen/app_icon_size"/>

            <Button
                android:id="@+id/bt21"
                android:layout_width="0dp"
                android:layout_height="150dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:textSize="@android:dimen/app_icon_size"/>

            <Button
                android:id="@+id/bt22"
                android:layout_width="0dp"
                android:layout_height="150dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:textSize="@android:dimen/app_icon_size"/>
        </TableRow>
    </TableLayout>


</LinearLayout>